fix(epic-367A): address review — null guard, immutable list, Set dedup, test coverage
Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>